# manasu

./: .gitignore  README.md  manasu-ui-ux.md  pyproject.toml  tsconfig.json
backend/: Dockerfile  config.py  database.py  debug_history.py  main.py  models.py  prompt_builder.py  pyproject.toml  requirements.txt  schemas.py
backend/auth/: internal.py
backend/routers/: admin.py  client.py  insights.py  quotes.py  schemas.py  sessions.py  therapist.py  users.py
backend/tasks/: __init__.py  mood_alerts.py  scheduler.py
frontend/: README.md  fix-therapist-colors.js  make-admin.ts  package-lock.json  package.json  ui.md
frontend/migrations/: 0000_glossy_rawhide_kid.sql  0001_lush_fixer.sql  0002_add_therapist_layer.sql
frontend/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/public/: manifest.json  sw.js
frontend/public/data/: emotions.json
frontend/public/images/: README.md
frontend/src/: middleware.ts
frontend/src/app/: App.tsx  globals.css  layout.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/dashboard/: page.tsx
frontend/src/app/admin/links/: page.tsx
frontend/src/app/admin/quotes/: page.tsx
frontend/src/app/check-in/: CheckIn.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/therapist/: layout.tsx
frontend/src/components/: ThemeToggle.tsx  withRole.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/db/: schema.ts
frontend/src/lib/: auth.ts  db.ts
(+31 files in other folders)
